2007-07-24  Jonathan Pobst  <monkey@jpobst.com>

	* Menu.cs: Add some missing methods to MenuItemCollection.

2007-07-24  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridView.cs: Added RowTemplateFull, creates a row from the templates in the columns.
	* DataGridViewBand.cs: DefaultHeaderCellType: initialize correctly. Resizable: if not set, check DGV.
	* DataGridViewColumn.cs: InheritedAutoSizeMode: if not set, check DGV. Resizable: delegate to base class. ToolTipText: Never return null. Initialize a few other properties correctly.
	* DataGridViewColumnCollection.cs: Add: Default column is a TextBoxColumn.
	* DataGridViewComboBoxCell.cs: Started implementing this, lots left still.
	* DataGridViewElement.cs: State defaults to Visible.
	* DataGridViewRowCollection.cs: Add: creates the new row based on a template.
	* DataGridViewTextBoxColumn.cs: SortMode: delegate to base class, but initialize to Automatic. ToString: implement correctly.

2007-07-24  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* Control.cs: Minor 1.1 corcompare fix.

2007-07-23  Jonathan Pobst  <monkey@jpobst.com>

	* LinkLabel.cs, PrintPreviewDialog.cs, TabPage.cs, TextBox.cs,
	TextBoxBase.cs, ToolBar.cs: 2.0 corcompare work.

2007-07-23  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridViewLinkColumn.cs, DataGridViewRowCollection.cs,
	  DataGridViewImageColumn.cs, DataGridViewSelectedCellCollection.cs,
	  DataGridViewComboBoxCell.cs, DataGridViewLinkCell.cs,
	  DataGridViewSelectedColumnCollection.cs,
	  DataGridViewSelectedRowCollection.cs: Corcompare work.

2007-07-23  Jonathan Pobst  <monkey@jpobst.com>

	* PrintDialog.cs: Stub UseEXDialog.  I chose to stub this because
	it is autoset by VS2005 designer and the effect is barely noticeable.

2007-07-23  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Implement HitTest.

2007-07-23  Rolf Bjarne Kvinge <RKvinge@novell.com> 

	* DataGridViewTextBoxCell.cs: Use DGV.EditControlInternal instead of